Change of new <Object> to <Object>.valueOf for Integer, Long, Short, Boolean, and Double.