@@ -89,7 +89,7 @@ public class ERXMultiplyingNumberFormatter extends NSNumberFormatter {
         } else {
             double d = n.doubleValue();
             d *= (double)factor;
-            return super.format(new Double(d), arg1, arg2);
+            return super.format(Double.valueOf(d), arg1, arg2);
         }
     }
 }
